# Lett

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
files/: main.js  style.css
migrations/2022-04-01-053815_create_users/: up.sql
migrations/2022-04-01-053925_create_contents/: up.sql
migrations/2022-04-01-053945_create_comments/: up.sql
migrations/2022-04-01-053951_create_settings/: up.sql
migrations/2022-04-01-130003_create_articles/: up.sql
migrations/2022-04-06-042855_create_sessions/: up.sql
migrations/2022-04-18-063407_create_comments/: up.sql
src/: config.rs  main.rs  server.rs
src/database/: mod.rs  schema.rs
src/database/models/: article.rs  comment.rs  content.rs  mod.rs  session.rs  setting.rs  settings.rs  user.rs
src/router/: admin.rs  archive.rs  comment.rs  delete.rs  index.rs  login.rs  mod.rs  new.rs  not_found.rs  post.rs  search.rs  static_files.rs  update.rs
src/router/admin_template/: index.html  layout.html  list.html  login.html  new.html  update.html
templates/: 404.html  admin.html  header.html  index.html  layout.html  layout_admin.html  layout_guest.html  list.html  login.html  macros.html  not_found.html  post.html
templates/admin/: admin.html  index.html  layout_admin.html  list.html  login.html  new.html  update.html
templates/admin_template/: layout.html  list.html  login.html  new.html  update.html
templates/static/: style.css
