[package]
name = "no_name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["mysql", "chrono"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
matchit = "0.5"
tera = "1.15"
tls-listener = "0.5"
tokio = { version = "1.17", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }
env_logger = "0.9"
log = "0.4"
dotenv = "0.15"
chrono = "0.4"
async-trait = "0.1"
anyhow = "1.0"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
