[package]
name = "lett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
hyper-staticfile = "0.9"
matchit = "0.6"
tera = { version = "1.15", default-features = false }
tokio = { version = "1.17", features = ["fs", "macros", "rt-multi-thread"] }
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
once_cell = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
toml = "0.5"
nanoid = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
pulldown-cmark = "0.9"
getopts = "0.2"
futures-util = "0.3"
rustls-pemfile = "1.0"
rustls = "0.20"
tokio-rustls = "0.23"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
